libapache2-mod-chxj (0.11.4-1) unstable; urgency=low

  * Fixed bug.
    - '+' has not been converted into ' '.
    - The bug that was not able to be displayed correctly when a
      double quart was included in value.

 -- Atsushi Konno <konn@users.sourceforge.jp>  Fri, 27 Jun 2008 16:02:03 +0900

libapache2-mod-chxj (0.11.3-1) unstable; urgency=low

  * Added APR 0.9 support for chxj_serf.

 -- Atsushi Konno <konn@users.sourceforge.jp>  Fri, 27 Jun 2008 09:44:42 +0900

libapache2-mod-chxj (0.11.2-1) unstable; urgency=low

  * Fixed Bug.
    - Because Input_filter of Apache is a fuck-shit, it abolishes it.
      Proxy is made at one's own expense by using libserf instead.
      (Reported by tiruda1600 _at_ users.sourceforge.jp. thanks!)

 -- Atsushi Konno <konn@users.sourceforge.jp>  Thu, 26 Jun 2008 10:32:44 +0900

libapache2-mod-chxj (0.11.1-1) unstable; urgency=low

  * Fixed bug.
    - ``Off'' did not work by the ChxjImageEngine directive.
      (Reported by R. thanks!)

 -- Atsushi Konno <konn@users.sourceforge.jp>  Thu, 24 Apr 2008 19:54:14 +0900

libapache2-mod-chxj (0.11.0-1) unstable; urgency=low

  * Fixed bug.
    - chxj_encoding and chxj_rencoding invalid destlen.
    - <p>a</p> ==> <p></p>a convertion defect.
    - The line feed code is disregarded at <pre> tag. 

  * Added Features.
    - Added <blockquote> tag to CHTML1.0 converter.
    - Added <br> tag clear attribute to CHTML1.0 converter.
    - Added <dir> tag to CHTML1.0 converter.
    - Added <dl> tag to CHTML1.0 converter.
    - Added <dt> tag to CHTML1.0 converter.
    - Added <dd> tag to CHTML1.0 converter.
    - Added <menu> tag to CHTML1.0 converter.
    - Added <p align> attribute to CHTML1.0 converter.
    - Added <plaintext> tag to CHTML1.0 converter. (no parse mode)
    - Added <blockquote> tag to CHTML2.0 converter.
    - Added <dl> tag to CHTML2.0 converter.
    - Added <dt> tag to CHTML2.0 converter.
    - Added <dd> tag to CHTML2.0 converter.